--- a/app/partials/station.html
+++ b/app/partials/station.html
@@ -1,16 +1,45 @@
-<p>
-This station name is {{ station.name }}
-<ul>
-	<li>Adresse : {{ station.address }}</li>
-	<li>Lattitude : {{ station.position.lat }}</li>
-	<li>Longitude : {{ station.position.lng }}</li>
-	<li>Status : {{ station.status }}</li>
-	<li>Vélos disponibles : {{ station.available_bikes }}</li>
-	<li>Places Disponibles : {{ station.available_bike_stands }}</li>
-	<li>Dernière mise à jour des infos : {{ station.last_update }}</li>
-	<li>Distance jusqu'à la station : {{distance}}</li>
-</ul>
+<div id="station{{ station.number }}">
+	<div class="header picture">
+		<img src="img/bg-2.jpg" alt="station de velô"/>
+		<div class="title">
+			<h1>{{ station.name }}</h1>
+			<h2>{{ station.address }}</h2>
+		</div>
+	</div>
 
-<span class="fav" ng-click="changeFav()">{{ favOrNot }}</span>
+	<paper-fab icon="{{favOrNot}}" style="fill:white" ng-click="changeFav()" class="fav"></paper-fab>
 
-</p>
+	<div class="content">
+
+		<div class="row">
+			<div class="velo-infos card">
+				<span class="number">{{ station.available_bikes }}</span>
+				<span class="caption">Vélos</span>
+				<paper-shadow z="1"></paper-shadow>
+			</div>
+			<div class="park-infos card">
+				<span class="number">{{ station.available_bike_stands }}</span>
+				<span class="caption">Places</span>
+				<paper-shadow z="1"></paper-shadow>
+			</div>
+		</div>
+		<div class="row">
+			<div class="distance card">
+				<span class="number">12 {{distance}}</span>
+				<span class="caption">jusqu'à la station</span>
+				<paper-shadow z="1"></paper-shadow>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+<div class="navbar">
+	<div class="left-part">
+		<paper-icon-button icon="arrow-back" style="fill:white;" ui-sref="map"></paper-icon-button>
+	</div>
+
+	<div class="right-part">
+		<paper-icon-button icon="refresh" style="fill:white;" ng-click="refreshStation()" class="refresh"></paper-icon-button>
+	</div>
+</div>
