--- a/app/partials/favoris.html
+++ b/app/partials/favoris.html
@@ -1,11 +1,23 @@
-<div id="stations-fav">
-	<ul>
-		<li ng-repeat="station in favStations">
-			<a ui-sref="station({stationId: {{station.number}} })">
-				<h2>{{station.name}}</h2>
-				<h3>{{station.address}}</h3>
-			</a>
-			<span ng-click="removeFav(station.number)">Supprimer des Favoris</span>
-		</li>
-	</ul>
+<div class="main-container">
+	<div id="stations-fav">
+		<ul class="favs">
+			<li ng-repeat="station in favStations" class="aStation">
+				<div class="numeral-infos">
+					<ul>
+						<li class="velo">{{station.available_bikes}} <img src="img/icons/velo.png" alt="velo icon"/></li>
+						<li class="station">{{station.available_bike_stands}} <img src="img/icons/station.png" alt="station icon"/></li>
+					</ul>
+				</div>
+				<a class="text-infos" ui-sref="station({stationId: {{station.number}} })">
+					<h2>{{station.name}}</h2>
+					<h3>{{station.address}}</h3>
+					<span>{{station.distance}}</span>
+				</a>
+				<paper-icon-button icon="delete" style="fill: #747474;" class="delete" ng-click="removeFav(station.number)"></paper-icon-button>
+			</li>
+		</ul>
+	</div>
+
+	<div class="navbar filled" nav-bar></div>
+
 </div>
