--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28,9 +28,51 @@ h1 {
   vertical-align: top;
 }
 
-.main-view, .main-container {
+.view-container, .main-view, .main-container {
   height: 100%;
   width: 100%;
+}
+
+.view-container {
+  position: relative;
+}
+
+[ui-view].ng-enter, [ui-view].ng-leave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  -webkit-transition:all .5s ease-in-out;
+    -moz-transition:all .5s ease-in-out;
+    -o-transition:all .5s ease-in-out;
+    transition:all .5s ease-in-out;
+}
+
+[ui-view].ng-enter {
+  opacity: 0;
+  -webkit-transform:scale3d(0.5, 0.5, 0.5);
+  -moz-transform:scale3d(0.5, 0.5, 0.5);
+  transform:scale3d(0.5, 0.5, 0.5);
+}
+
+[ui-view].ng-enter-active {
+  opacity: 1;
+  -webkit-transform:scale3d(1, 1, 1);
+  -moz-transform:scale3d(1, 1, 1);
+  transform:scale3d(1, 1, 1);
+}
+
+[ui-view].ng-leave {
+  opacity: 1; 
+  -webkit-transform:translate3d(0, 0, 0);
+  -moz-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+}
+
+[ui-view].ng-leave-active {
+  opacity: 0;
+  -webkit-transform:translate3d(100px, 0, 0);
+  -moz-transform:translate3d(100px, 0, 0);
+  transform:translate3d(100px, 0, 0);
 }
 
 
@@ -63,6 +105,13 @@ h1 {
   text-align: right
 }
 
+.navbar paper-menu-button {
+  vertical-align: top;
+}
+
+.navbar paper-menu-button::shadow #menu { 
+
+}
 
 
 /* ---------- SIDE MENU --------- */
@@ -79,8 +128,8 @@ h1 {
   -webkit-transition: left 0.5s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
           transition: left 0.5s ease-out;
 
-  -webkit-transition-delay: 0.3s; /* Safari */
-    transition-delay: 0.3s;
+  -webkit-transition-delay: 0.4s; /* Safari */
+    transition-delay: 0.4s;
 }
 
 .menu-back {
@@ -90,8 +139,8 @@ h1 {
   height: 100%;
   top: 0;
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
-          transition: opacity 0.3s ease-out;
+  -webkit-transition: opacity 0.4s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+          transition: opacity 0.4s ease-out;
 }
 
 .menu {
@@ -103,8 +152,8 @@ h1 {
   width: 25em;
   margin: 0;
   background: #f9f9f9;
-  -webkit-transition: left 0.3s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
-          transition: left 0.3s ease-out;
+  -webkit-transition: left 0.4s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+          transition: left 0.4s ease-out;
 }
 
 .menu a { 
@@ -339,6 +388,14 @@ h1 {
   padding-top: 5em;
 }
 
+.no-stations {
+  margin-top: 2em; 
+  font-size: 2em;
+  font-weight: 700;
+  color: rgba(0,0,0,0.16);
+  text-align: center;
+}
+
 #stations-fav ul {
   list-style: none;
   margin: 0;
@@ -346,15 +403,23 @@ h1 {
 }
 
 .favs .aStation {
+  position: relative;
   clear: both;
   display: inline-block;
   width: 100%;
-  padding: 1em;
   border-bottom: 1px solid rgba(0,0,0,0.16);
 }
 
 .favs a {
   text-decoration: none;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+}
+
+.favs a paper-ripple {
+  color: #747474;
 }
 
 .favs .numeral-infos {
@@ -390,8 +455,15 @@ h1 {
 .favs .text-infos h2, .favs .text-infos h3 {
   margin: 0;
   padding: 0;
-  font-weight: 500;
   font-size: 1.2em;
+}
+
+.favs .text-infos h2 {
+  font-weight: 500;
+}
+
+.favs .text-infos h3 {
+  font-weight: 400;
 }
 
 .favs .text-infos span {
@@ -406,4 +478,36 @@ h1 {
 
 .favs paper-icon-button {
   padding: 1em;
+}
+
+@media screen and (max-width: 550px) {
+
+
+
+  .header.picture {
+    height: 30%;
+  }
+
+  .fav {
+    top: 28%;
+  }
+
+  .content {
+    height: 70%;
+  }
+
+  .favs .text-infos {
+    max-width: 45%;
+  }
+
+}
+
+@media screen and (max-width: 418px) {
+
+  .header.picture img {
+    height: 100%;
+    width: auto;
+    max-width: none;
+  }
+
 }
