--- a/app/partials/components/side-menu.html
+++ b/app/partials/components/side-menu.html
@@ -2,12 +2,12 @@
     <div class="menu">
     	<div class="head-part">
     		<div class="avatar">
-    			<a href="http://simonbats.com" title="Portfolio de Simon Bats">
+    			<a href="http://simonbats.com" title="Portfolio de Simon Bats" target="_blank">
     				<img src="img/avatar-sb.png" alt="Simon Bats"/>
     			</a>
     		</div>
     		<div class="text-infos">
-    			<a href="http://simonbats.com" title="Portfolio de Simon Bats">
+    			<a href="http://simonbats.com" title="Portfolio de Simon Bats" target="_blank">
     				<span class="name">Simon Bats</span>
     			</a>
     		</div>
@@ -15,8 +15,8 @@
 	    <ul class="links">
 	        <li>
 	        	<div>
-		        	<a ui-sref="map" ng-click="closeMenu()">
-		        		<core-icon icon="google"></core-icon> Carte
+		        	<a ui-sref="map" ui-sref-active="active" ng-click="closeMenu()">
+		        		<core-icon icon="customicon:map"></core-icon> Carte
 		        		<paper-ripple class="recenteringTouch" fit></paper-ripple>
 		        	</a>
 		        </div>
@@ -24,7 +24,7 @@
 
 	        <li>
 	        	<div>
-		        	<a ui-sref="favoris" ng-click="closeMenu()">
+		        	<a ui-sref="favoris" ui-sref-active="active" ng-click="closeMenu()">
 		        		<core-icon icon="star"></core-icon> Mes Favoris
 		        		<paper-ripple class="recenteringTouch" fit></paper-ripple>
 		        	</a>
