--- a/prod/app.css
+++ b/prod/app.css
@@ -34,45 +34,56 @@ h1 {
 }
 
 .view-container {
-  position: relative;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  -webkit-transition:all 0.4s ease-in-out;
+    -moz-transition:all 0.4s ease-in-out;
+    -o-transition:all 0.4s ease-in-out;
+    transition:all 0.4s ease-in-out;
+}
+
+.view-container.shown {
+  left: 0;
 }
 
 [ui-view].ng-enter, [ui-view].ng-leave {
   position: absolute;
   left: 0;
   right: 0;
-  -webkit-transition:all .5s ease-in-out;
-    -moz-transition:all .5s ease-in-out;
-    -o-transition:all .5s ease-in-out;
-    transition:all .5s ease-in-out;
+  -webkit-transition:all 0.4s ease-in-out;
+    -moz-transition:all 0.4s ease-in-out;
+    -o-transition:all 0.4s ease-in-out;
+    transition:all 0.4s ease-in-out;
 }
 
 [ui-view].ng-enter {
   opacity: 0;
-  -webkit-transform:scale3d(0.5, 0.5, 0.5);
-  -moz-transform:scale3d(0.5, 0.5, 0.5);
-  transform:scale3d(0.5, 0.5, 0.5);
+  -webkit-transform: scale(0.8);  /* Chrome, Opera 15+, Safari 3.1+ */
+      -ms-transform: scale(0.8);  /* IE 9 */
+          transform: scale(0.8);
 }
 
 [ui-view].ng-enter-active {
   opacity: 1;
-  -webkit-transform:scale3d(1, 1, 1);
-  -moz-transform:scale3d(1, 1, 1);
-  transform:scale3d(1, 1, 1);
+  -webkit-transform: scale(1);  /* Chrome, Opera 15+, Safari 3.1+ */
+      -ms-transform: scale(1);  /* IE 9 */
+          transform: scale(1);
 }
 
 [ui-view].ng-leave {
   opacity: 1; 
-  -webkit-transform:translate3d(0, 0, 0);
-  -moz-transform:translate3d(0, 0, 0);
-  transform:translate3d(0, 0, 0);
+  -webkit-transform: scale(1);  /* Chrome, Opera 15+, Safari 3.1+ */
+      -ms-transform: scale(1);  /* IE 9 */
+          transform: scale(1);
 }
 
 [ui-view].ng-leave-active {
   opacity: 0;
-  -webkit-transform:translate3d(100px, 0, 0);
-  -moz-transform:translate3d(100px, 0, 0);
-  transform:translate3d(100px, 0, 0);
+  -webkit-transform: scale(0.8);  /* Chrome, Opera 15+, Safari 3.1+ */
+      -ms-transform: scale(0.8);  /* IE 9 */
+          transform: scale(0.8);
 }
 
 
@@ -172,7 +183,7 @@ h1 {
 
 .head-part {
   width: 100%;
-  background: url('../img/bg.jpg') no-repeat top left;
+  background: url('img/bg.jpg') no-repeat top left;
 }
 
 .avatar {
@@ -235,8 +246,7 @@ h1 {
 }
 
 
-/* ------------- MAP PAGE -------------- */
-
+/* ------------- MAP -------------- */
 .switch {
   position: absolute;
   bottom: 5%;
@@ -271,6 +281,55 @@ h1 {
   color: #5f7c8a;
 } 
 
+.loader-handler {
+  display: block;
+  height: 100%;
+  width: 100%;
+  padding: 30% 25%;
+  position: absolute;
+  top: 0;
+  text-align: center;
+  background: rgba(50,50,50,0.6);
+  -webkit-transition: display 0.5s ease-out;  /* Android 2.1+, Chrome 1-25, iOS 3.2-6.1, Safari 3.2-6  */
+          transition: display 0.5s ease-out;
+}
+
+.loader-handler p {
+  font-size: 2em;
+  font-weight: 700;
+  color: #fff;
+}
+
+.loader-handler.hide {
+  -webkit-animation: hideLoader 0.4s linear 1 forwards;
+  animation: hideLoader 0.4s linear 1 forwards;
+}
+
+@-webkit-keyframes hideLoader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+    display: none;
+  }
+}
+
+@keyframes hideLoader {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+    display: none;
+  }
+}
 
 
 
@@ -417,19 +476,19 @@ h1 {
 @-webkit-keyframes deletingFav {
     0%   {left: 0;}
     50%  {left: -100%; height: auto;}
-    100% {height: 0;}
+    100% {height: 0; left: -100%}
 }
 
 /* Standard syntax */
 @keyframes deletingFav {
     0%   {left: 0;}
     50%  {left: -100%; height: auto;}
-    100% {height: 0;}
+    100% {height: 0; left: -100%}
 }
 
 .favs .aStation.deleting {
-    -webkit-animation: deletingFav 0.8s ease 0 1 forwards ; /* Chrome, Safari, Opera */
-    animation: deletingFav 0.8s ease 0 1 forwards ; /* Standard syntax */
+    -webkit-animation: deletingFav 0.8s ease 1 forwards ; /* Chrome, Safari, Opera */
+    animation: deletingFav 0.8s ease 1 forwards ; /* Standard syntax */
 }
 
 .favs a {
@@ -511,3 +570,50 @@ h1 {
 
 }
 
+
+
+/* ------------- SPINNER ANIMATION FROM Tim Holman Codpen Collection --------- */
+
+.loader {
+  width: 50px;
+  height: 70px;
+  margin: auto;
+}
+      
+.loadinglocation:before {
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin-top: -5px;
+  border: 2px solid #ccc;
+  content: "";
+  -webkit-animation: locationbob 0.5s ease infinite alternate;
+  animation: locationbob 0.5s ease infinite alternate;
+  border-radius: 100% 100% 0 100%;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}      
+
+
+.loadinglocation:after {
+  display: block;
+  width: 56px;
+  height: 10px;
+  margin-top: 10px;
+  background-color: rgba(255,255,255,0.267);
+  content: "";
+  border-radius: 100%;
+}
+
+@-webkit-keyframes locationbob {
+  to {
+    transform: rotate( 45deg ) translate( 3px, 3px );
+  }
+}
+
+@keyframes locationbob {
+  to {
+    transform: rotate( 45deg ) translate( 3px, 3px );
+  }
+}
